objects/CRM_KPI__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Achieved_This_Quarter__c</fullName>
        <label>Achieved This Quarter</label>
        <summarizedField>CRM_Monthly_Target_and_Achievement__c.CRM_Achieved_This_Month__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Monthly_Target_and_Achievement__c.CRM_Achieved_This_Month__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Monthly_Target_and_Achievement__c.CRM_Achieved_This_Month__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Monthly_Target_and_Achievement__c.CRM_KPI__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Annual_KPI__c</fullName>
        <label>Annual KPI</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CRM_User__c</field>
                <operation>equals</operation>
                <valueField>CRM_Annual_KPI__c.CRM_User__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.CRM_Year__c</field>
                <operation>equals</operation>
                <valueField>CRM_Annual_KPI__c.CRM_Year__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_Annual_KPI__c</referenceTo>
        <relationshipName>CRM_KPIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_From__c</fullName>
        <label>From</label>
        <summarizedField>CRM_Monthly_Target_and_Achievement__c.CRM_From__c</summarizedField>
        <summaryForeignKey>CRM_Monthly_Target_and_Achievement__c.CRM_KPI__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Target_This_Quarter__c</fullName>
        <label>Target This Quarter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_To__c</fullName>
        <label>To</label>
        <summarizedField>CRM_Monthly_Target_and_Achievement__c.CRM_To__c</summarizedField>
        <summaryForeignKey>CRM_Monthly_Target_and_Achievement__c.CRM_KPI__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Unique_KPI__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique KPI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRM_User_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017-2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018-2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019-2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020-2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021-2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022-2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023-2024</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quarterly Target And Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CRM_User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CRM_Year__c</columns>
        <columns>CRM_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quarterly Target And Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Target And Achievements</pluralLabel>
    <recordTypes>
        <fullName>Applications_To_Settle</fullName>
        <active>true</active>
        <label>Settled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Applications_To_Submit</fullName>
        <active>true</active>
        <label>Applications Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leads_To_Convert</fullName>
        <active>true</active>
        <label>Leads Conversion</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Quarter_Change</fullName>
        <active>true</active>
        <description>Quarter can not be changed after inserted.</description>
        <errorConditionFormula>AND
(
PRIORVALUE(CRM_Quarter__c) != NULL,
TEXT(CRM_Quarter__c) != TEXT(PRIORVALUE(CRM_Quarter__c))
)</errorConditionFormula>
        <errorDisplayField>CRM_Quarter__c</errorDisplayField>
        <errorMessage>Changing of Quarter is not allowed.</errorMessage>
    </validationRules>
</CustomObject>